# http-client

./: .gitignore  CMakeLists.txt  LICENSE
include/client/: client.cpp  client.hpp
include/curlpp/: curl_easy.cpp  curl_easy.hpp  curlpp_exceptions.hpp  request.hpp  response.hpp
include/json/: json.cpp  json.hpp
